une Series d'améliorations et de corrections sur la partie Storage